further prevent camera clipping; change linking panel message; fix social layout width; add camera backing

--- a/docs/main.css
+++ b/docs/main.css
@@ -15,21 +15,28 @@ body {
   background-size: 150% auto;
   background-position: 60% 20%;
   background-repeat: no-repeat;
-  background-color: #2e4264d0;
+  background-color: #2e4264;
   box-shadow: inset 0 0 130px rgba(0, 0, 0, 0.5);
   margin: 0;
   height: 100vh;
   overflow: hidden;
   position: relative;
   min-width: 1090px;
+  min-height: 700px;
   perspective: 1600px;
+}
+.disable-selection {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 #video-camera {
   position: absolute;
   right: -30px;
   bottom: -200px;
   transform: scale(1.1);
-  user-select: none;
 }
 #video-camera #camera-body {
   height: 100vh;
@@ -45,6 +52,7 @@ body {
   pointer-events: none;
   box-shadow: inset 0 0 40px black, inset 0 0 80px rgba(0, 0, 0, 0.6);
   transform: scale(1.01);
+  overflow: hidden;
   z-index: 4;
 }
 #video-camera #linking-title {
@@ -57,6 +65,7 @@ body {
   width: 100%;
   text-align: center;
   white-space: nowrap;
+  padding: 30px 0;
   font-family: ZapfinoLT, fantasy;
   font-size: 8vh;
   font-weight: bold;
@@ -80,6 +89,11 @@ body {
 }
 #video-camera #viewer:active {
   cursor: url(closed_hand.png), pointer;
+}
+#video-camera #backing {
+  z-index: -1;
+  background-color: black;
+  transform: scale(1.1);
 }
 #video-camera #recording {
   background-color: #b40000;
@@ -178,7 +192,6 @@ body {
   top: 1px;
   left: 1px;
   z-index: -1;
-  user-select: none;
 }
 #lower-third {
   opacity: 0;
@@ -194,15 +207,15 @@ body {
 }
 #footer {
   position: absolute;
-  bottom: 0;
+  bottom: -5px;
   width: 100%;
   z-index: 1000;
   margin: 0;
-  padding: 8px 0;
-  background-color: #2e4264d0;
+  padding: 8px 0 15px 0;
+  background-color: rgba(46, 66, 100, 0.82);
   box-shadow: 0 -1px 8px rgba(0, 0, 0, 0.5);
   text-align: left;
-  transform: translateY(-13px) translateZ(50px) scale(0.97);
+  transform: translateY(-25px) translateZ(100px) scale(0.94);
 }
 #footer form {
   display: inline-block;
@@ -278,7 +291,7 @@ body {
   position: absolute;
   top: 8px;
   right: 0;
-  margin-right: 20px;
+  width: 170px;
 }
 #footer #social a {
   color: white;
@@ -321,9 +334,13 @@ body {
 }
 @media only screen and (max-device-width: 850px) {
   body {
+    background-color: #333;
     background-size: auto 100%;
-    min-width: 0;
     perspective: none;
+    height: 100vh;
+    min-height: 0;
+    min-width: 0;
+    overflow-y: scroll;
   }
   #title {
     top: 0;
@@ -334,19 +351,22 @@ body {
   #lower-third,
   #social,
   #gears,
-  #copyright {
+  #copyright,
+  #subscribed {
     display: none;
   }
   #video-camera {
     right: -310px;
     bottom: -120px;
-    transform: scale(0.8);
+    transform: scale(0.85);
+    clip: rect(0, 200vh, 87vh, 0);
   }
   #footer {
     text-align: center;
     padding-left: 0;
     padding-right: 0;
     transform: none;
+    background: #2e4264;
   }
   #footer form {
     margin: 0;
