--- a/src/index.less
+++ b/src/index.less
@@ -11,7 +11,7 @@
     src: url('../fonts/ZapfinoExtraLT-Ligatures.otf');
 }
 
-@bg-color: #2e4264d0;
+@bg-color: #2e4264;
 @text-color: white;
 
 body {
@@ -29,8 +29,17 @@ body {
 
     position: relative;
     min-width: 1090px;
+    min-height: 700px;
 
     perspective: 1600px;
+}
+
+.disable-selection {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 #video-camera {
@@ -38,8 +47,6 @@ body {
     right: -30px;
     bottom: -200px;
     transform: scale(1.1);
-
-    user-select: none;
 
     #camera-body {
         height: 100vh;
@@ -57,6 +64,7 @@ body {
         pointer-events: none;
         box-shadow: inset 0 0 40px black, inset 0 0 80px rgba(0, 0, 0, 0.6);
         transform: scale(1.01);
+        overflow: hidden;
         z-index: 4;
     }
     #linking-title {
@@ -71,6 +79,8 @@ body {
         width: 100%;
         text-align: center;
         white-space: nowrap;
+
+        padding: 30px 0;
 
         font-family: ZapfinoLT, fantasy;
         font-size: 8vh;
@@ -101,6 +111,11 @@ body {
         &:active {
             cursor: url('../img/closed_hand.png'), pointer;
         }
+    }
+    #backing {
+        z-index: -1;
+        background-color: black;
+        transform: scale(1.1);
     }
 
     #recording {
@@ -225,7 +240,6 @@ body {
         left: 1px;
 
         z-index: -1;
-        user-select: none;
     }
 }
 
@@ -247,18 +261,18 @@ body {
 
 #footer {
     position: absolute;
-    bottom: 0;
+    bottom: -5px;
     width: 100%;
     z-index: 1000;
 
     margin: 0;
-    padding: 8px 0;
+    padding: 8px 0 15px 0;
 
-    background-color: @bg-color;
+    background-color: fade(@bg-color, 82%);
     box-shadow: 0 -1px 8px rgba(0, 0, 0, 0.5);
 
     text-align: left;
-    transform: translateY(-13px) translateZ(50px) scale(0.97);
+    transform: translateY(-25px) translateZ(100px) scale(0.94);
 
     form {
         display: inline-block;
@@ -355,7 +369,7 @@ body {
         position: absolute;
         top: 8px;
         right: 0;
-        margin-right: 20px;
+        width: 170px;
 
         a {
             color: @text-color;
@@ -410,9 +424,13 @@ body {
 
 @media only screen and (max-device-width: 850px) {
     body {
+        background-color: #333;
         background-size: auto 100%;
-        min-width: 0;
         perspective: none;
+        height: 100vh;
+        min-height: 0;
+        min-width: 0;
+        overflow-y: scroll;
     }
 
     #title {
@@ -422,14 +440,15 @@ body {
         transform-origin: 50% 15%;
     }
 
-    #lower-third, #social, #gears, #copyright {
+    #lower-third, #social, #gears, #copyright, #subscribed {
         display: none;
     }
 
     #video-camera {
         right: -310px;
         bottom: -120px;
-        transform: scale(0.8);
+        transform: scale(0.85);
+        clip: rect(0, 200vh, 87vh, 0);
     }
 
     #footer {
@@ -437,6 +456,7 @@ body {
         padding-left: 0;
         padding-right: 0;
         transform: none;
+        background: @bg-color;
 
         form {
             margin: 0;
